--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f7f7f7;
+        }
+        #login-container, #chat-container {
+            width: 100%;
+            max-width: 400px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: white;
+            border-radius: 8px;
         }
         #chat-container {
-            display: flex;
+            display: none;
             flex-direction: column;
-            height: 100vh;
+            height: 400px;
         }
         #messages {
             flex: 1;
@@ -44,15 +57,56 @@
         #send-btn:hover {
             background-color: #0056b3;
         }
+        #google-signin-btn {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 10px;
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            cursor: pointer;
+            transition: background-color 0.2s;
+        }
+        #google-signin-btn:hover {
+            background-color: #f0f0f0;
+        }
+        #google-signin-btn img {
+            width: 20px;
+            margin-right: 10px;
+        }
+        #logout-btn {
+            margin-top: 10px;
+            background-color: #dc3545;
+            color: white;
+            border: none;
+            padding: 8px 12px;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        #logout-btn:hover {
+            background-color: #c82333;
+        }
     </style>
 </head>
 <body>
+    <!-- Login Container -->
+    <div id="login-container">
+        <h3>Welcome to Chat App</h3>
+        <div id="google-signin-btn" onclick="signInWithGoogle()">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" alt="Google Logo">
+            <span>Sign in with Google</span>
+        </div>
+    </div>
+
+    <!-- Chat Container -->
     <div id="chat-container">
         <div id="messages"></div>
         <form id="message-form" onsubmit="sendMessage(event)">
             <input type="text" id="message-input" placeholder="Type a message" required>
             <button type="submit" id="send-btn">Send</button>
         </form>
+        <button id="logout-btn" onclick="logoutUser()">Log out</button>
     </div>
 
     <script type="module">
@@ -61,30 +115,35 @@
         import { getFirestore, collection, addDoc, getDocs, onSnapshot, orderBy, query } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
         // Firebase config
-     const firebaseConfig = {
-    apiKey: "AIzaSyBqol7KbGT5p7ppA9z1zu0d7YiIxkaEm1Q",
-    authDomain: "sample-309eb.firebaseapp.com",
-    projectId: "sample-309eb",
-    storageBucket: "sample-309eb.appspot.com",
-    messagingSenderId: "971052026993",
-    appId: "1:971052026993:web:b2224b762eb9dc47105fd0",
-    measurementId: "G-WQ2PW6FFQE"
-  };
+        const firebaseConfig = {
+            apiKey: "AIzaSyBqol7KbGT5p7ppA9z1zu0d7YiIxkaEm1Q",
+            authDomain: "sample-309eb.firebaseapp.com",
+            projectId: "sample-309eb",
+            storageBucket: "sample-309eb.appspot.com",
+            messagingSenderId: "971052026993",
+            appId: "1:971052026993:web:b2224b762eb9dc47105fd0",
+            measurementId: "G-WQ2PW6FFQE"
+        };
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
         const db = getFirestore(app);
 
+        const loginContainer = document.getElementById('login-container');
+        const chatContainer = document.getElementById('chat-container');
         const messagesContainer = document.getElementById('messages');
         const messageInput = document.getElementById('message-input');
 
         // Listen for auth state changes
         onAuthStateChanged(auth, (user) => {
             if (user) {
+                loginContainer.style.display = 'none';
+                chatContainer.style.display = 'flex';
                 fetchMessages();
             } else {
-                messagesContainer.innerHTML = '<p>Please log in to chat.</p>';
+                loginContainer.style.display = 'block';
+                chatContainer.style.display = 'none';
             }
         });
 
