--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Firebase Chat App</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,6 +34,20 @@
             overflow-y: auto;
             padding: 10px;
             border-bottom: 1px solid #ddd;
+        }
+        .message {
+            padding: 10px;
+            border-radius: 8px;
+            margin-bottom: 10px;
+            max-width: 60%;
+        }
+        .my-message {
+            background-color: #d1e7dd;
+            margin-left: auto;
+        }
+        .other-message {
+            background-color: #f8d7da;
+            margin-right: auto;
         }
         #message-form {
             display: flex;
@@ -71,8 +86,7 @@
         #google-signin-btn:hover {
             background-color: #f0f0f0;
         }
-        #google-signin-btn img {
-            width: 20px;
+        #google-signin-btn i {
             margin-right: 10px;
         }
         #logout-btn {
@@ -94,7 +108,7 @@
     <div id="login-container">
         <h3>Welcome to Chat App</h3>
         <div id="google-signin-btn" onclick="signInWithGoogle()">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" alt="Google Logo">
+            <i class="fab fa-google"></i>
             <span>Sign in with Google</span>
         </div>
     </div>
@@ -112,7 +126,7 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
         import { getAuth, onAuthStateChanged, GoogleAuthProvider, signInWithPopup, signOut as firebaseSignOut } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
-        import { getFirestore, collection, addDoc, getDocs, onSnapshot, orderBy, query } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
+        import { getFirestore, collection, addDoc, onSnapshot, orderBy, query } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
         // Firebase config
         const firebaseConfig = {
@@ -152,9 +166,11 @@
             const messagesQuery = query(collection(db, 'messages'), orderBy('timestamp'));
             onSnapshot(messagesQuery, (querySnapshot) => {
                 messagesContainer.innerHTML = '';
+                const currentUser = auth.currentUser;
                 querySnapshot.forEach((doc) => {
                     const data = doc.data();
-                    messagesContainer.innerHTML += `<p><strong>${data.userName}</strong>: ${data.text}</p>`;
+                    const messageClass = data.userName === currentUser.displayName ? 'my-message' : 'other-message';
+                    messagesContainer.innerHTML += `<div class="message ${messageClass}"><strong>${data.userName}</strong>: ${data.text}</div>`;
                 });
                 messagesContainer.scrollTop = messagesContainer.scrollHeight;
             });
