--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
         import { getFirestore, collection, addDoc, onSnapshot, orderBy, query } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-firestore.js";
 
         // Firebase config
-        const firebaseConfig = {
-            apiKey: "AIzaSyBqol7KbGT5p7ppA9z1zu0d7YiIxkaEm1Q",
-            authDomain: "sample-309eb.firebaseapp.com",
-            projectId: "sample-309eb",
-            storageBucket: "sample-309eb.appspot.com",
-            messagingSenderId: "971052026993",
-            appId: "1:971052026993:web:b2224b762eb9dc47105fd0",
-            measurementId: "G-WQ2PW6FFQE"
-        };
+       const firebaseConfig = {
+  apiKey: "AIzaSyCxILU_su1_NtUsi3mbL28osfEcq31FG1Y",
+  authDomain: "class1-3e030.firebaseapp.com",
+  projectId: "class1-3e030",
+  storageBucket: "class1-3e030.appspot.com",
+  messagingSenderId: "112143951796",
+  appId: "1:112143951796:web:9b0cf84fe943a6a79634e1",
+  measurementId: "G-X24V8Y3S27"
+};
 
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
